# holy_linux

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Errors.h  Errors.hpp  FileSaving.h  FileSaving.hpp  Headers.h  Headers.hpp  Misc.h  Nodes.h  Nodes.hpp  Pages.h  Pages.hpp  Syntax.h  Syntax.hpp  main.cpp
src/apps/: HolyVim.cpp  HolyVim.hpp
src/cmd/: CommandParams.hpp  CommandParser.cpp  CommandParser.hpp  Execution.cpp  Execution.hpp
src/core/: Boot.cpp  Boot.hpp  Run.cpp  Run.hpp
src/fs/: FileSaving.cpp  FileSaving.hpp  FileTree.cpp  FileTree.hpp  NodeStruct.cpp  NodeStruct.hpp
src/session/: Login.cpp  Login.hpp  SessionData.cpp  SessionData.hpp
src/ui/: Messages.cpp  Messages.hpp  Pages.cpp  Pages.hpp  Syntax.cpp  Syntax.hpp
src/util/: Misc.cpp  Misc.hpp
